force-app/main/default/objects/Tipo_de_documentos__c/Tipo_de_documentos__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Tipo de documentos para matchear los codigos de tipo de documento que vienen de sap y usarlos para ver los PDF</description>
    <label>Tipo de documentos</label>
</CustomObject>