force-app/main/default/objects/Tipo_de_documentos__c/fields/D1__c.field-meta.xml
<CustomField>
    <fullName>D1__c</fullName>
    <label>D1</label>
    <length>16</length>
    <type>Text</type>
</CustomField>