force-app/main/default/objects/Tipo_de_documentos__c/fields/D2__c.field-meta.xml
<CustomField>
    <fullName>D2__c</fullName>
    <label>D2</label>
    <length>16</length>
    <type>Text</type>
</CustomField>