force-app/main/default/objects/Tipo_de_documentos__c/fields/D3__c.field-meta.xml
<CustomField>
    <fullName>D3__c</fullName>
    <label>D3</label>
    <length>16</length>
    <type>Text</type>
</CustomField>