force-app/main/default/objects/Tipo_de_documentos__c/fields/DG__c.field-meta.xml
<CustomField>
    <fullName>DG__c</fullName>
    <label>DG</label>
    <length>16</length>
    <type>Text</type>
</CustomField>