force-app/main/default/objects/Tipo_de_documentos__c/fields/DR__c.field-meta.xml
<CustomField>
    <fullName>DR__c</fullName>
    <label>DR</label>
    <length>16</length>
    <type>Text</type>
</CustomField>