force-app/main/default/objects/Tipo_de_documentos__c/fields/Z3__c.field-meta.xml
<CustomField>
    <fullName>Z3__c</fullName>
    <label>Z3</label>
    <length>16</length>
    <type>Text</type>
</CustomField>