force-app/main/default/objects/Tipo_de_documentos__c/fields/Z9__c.field-meta.xml
<CustomField>
    <fullName>Z9__c</fullName>
    <label>Z9</label>
    <length>16</length>
    <type>Text</type>
</CustomField>