force-app/main/default/objects/Tipo_de_documentos__c/fields/ZJ__c.field-meta.xml
<CustomField>
    <fullName>ZJ__c</fullName>
    <label>ZJ</label>
    <length>16</length>
    <type>Text</type>
</CustomField>